--- a/devquiz/pubspec.yaml
+++ b/devquiz/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/database/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
