--- a/devquiz/pubspec.yaml
+++ b/devquiz/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   google_fonts: ^1.0.0
+  share_plus: ^1.2.0
 
 
 dev_dependencies:
